--- a/front/src/index.css
+++ b/front/src/index.css
@@ -5,10 +5,29 @@ html {
 body {
     margin: 0;
     height: 100%;
+    font-family: sans-serif;
 }
 
 #root {
     height: 100%;
     display: flex;
-    background-color: #fff; /* Required to support fullscreen */
+}
+
+dialog, #root {
+    background-color: #000;
+    color: #c2c2c2;
+}
+
+button {
+    background-color: #c2c2c2;
+    border-style: none;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #dcdcdc;
+}
+
+button:active {
+    background-color: #ededed;
 }
